tests/integrations/basic-fail/Cargo.stderr
    Finished test [unoptimized + debuginfo] target(s) 
     Running unittests src/lib.rs 
     Running tests/ui_tests.rs 
   Compiler flags: ["--error-format=json", "--edition=2021"]
   Building test dependencies...
tests/actual_tests/bad_pattern.rs ... FAILED
tests/actual_tests/foomp.rs ... FAILED

tests/actual_tests/bad_pattern.rs FAILED:
command: "rustc" "--error-format=json" "--edition=2021" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/debug" "-L" "$DIR/$DIR/../../../target/debug" "tests/actual_tests/bad_pattern.rs"

substring `miesmätsched types` not found in stderr output
expected because of pattern here: tests/actual_tests/bad_pattern.rs:5

There were 1 unmatched diagnostics at tests/actual_tests/bad_pattern.rs:4
    Error: mismatched types

full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests/bad_pattern.rs:4:9
  |
4 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/$DIR/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.



tests/actual_tests/foomp.rs FAILED:
command: "rustc" "--error-format=json" "--edition=2021" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/debug" "-L" "$DIR/$DIR/../../../target/debug" "tests/actual_tests/foomp.rs"

actual output differed from expected
--- tests/actual_tests/foomp.stderr
+++ <stderr output>
... 3 lines skipped ...
 4 |     add("42", 3);
   |     --- ^^^^ expected `usize`, found `&str`
+  |     |
+  |     arguments to this function are incorrect
   |
 note: function defined here
~ --> $DIR/$DIR/src/lib.rs:1:8
   |
 1 | pub fn add(left: usize, right: usize) -> usize {
~  |        ^^^ some expected text that isn't in the actual message
 
-error: aborting doo to previous error
+error: aborting due to previous error
 
 For more information about this error, try `rustc --explain E0308`.
 


full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests/foomp.rs:4:9
  |
4 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/$DIR/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.


FAILURES:
    tests/actual_tests/bad_pattern.rs
    tests/actual_tests/foomp.rs

test result: FAIL. 2 tests failed, 0 tests passed, 0 ignored, 0 filtered out
error: test failed, to rerun pass '--test ui_tests'
